src/index.css
:root {
  --color-primary-light: #dbc7e7;
  --color-text: #000000;
  --color-text-dark: #adb5bd;
  --color-background-100: #ffafcc;
  --color-background-500: #ffc8dd;
  --color-background-900: #cdb4db;
  --color-red: #fa5252;
  --color-red-dark: #e03131;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  overflow: hidden;
  font-size: 0.8vw;
}
@media (max-width: 800px) {
  html {
    font-size: 1.3vw;
  }
}

body {
  font-family:
    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;

  color: var(--color-text);
  background-color: var(--color-background-900);
  padding: 2.4rem;
}

* {
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
  transition: scrollbar-color 0.3s;

  &:hover {
    scrollbar-color: #a2d2ff transparent;
  }

  &:not(:hover)::-webkit-scrollbar-thumb {
    background: transparent;
  }

  &::-webkit-scrollbar {
    width: 8px;
  }

  &::-webkit-scrollbar-thumb {
    border-radius: 5px;
    transition: background 0.3s;
    background: rgba(0, 0, 0, 0.75);
  }
}

.content {
  padding: 17px 9px 17px 17px;
  width: 300px;
  height: 200px;
  word-break: break-all;
  overflow-y: scroll;
  animation: background 5s infinite alternate;
}

@keyframes background {
  from {
    background: pink;
  }
  to {
    background: #c0d6ff;
  }
}
.nav-bar {
  color: #000000;
  display: grid;
  grid-template-columns: 0.6fr 1.6fr 0.4fr 0.4fr;
  align-items: center;
  height: 7.2rem;
  padding: 0 3.2rem;
  background-color: var(--color-background-500);
  border-radius: 0.9rem;
}
@media (max-width: 800px) {
  .nav-bar {
    padding: 0 1rem;
    height: 8rem;
    grid-template-columns: 0.3fr 0.7fr 0.4fr 0.2fr;
  }
}
.nav-profile-picture {
  border-radius: 10%;
  justify-self: end;
  height: 5rem; /* for fitting in navbar */
  width: auto;
  object-fit: contain;
  display: block;
  cursor: pointer;
}
.screenCover {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 2;
  background-color: rgba(0, 0, 0, 0.562);
}
.userPopup {
  font-size: 3vmin;
  text-align: center;
  color: #000000;
  align-items: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 86vmin;
  height: 70vmin;
  background-color: var(--color-background-900);
  border-radius: 5px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 3;
}
.userPopup > img {
  border-radius: 10%;
  width: 25vmin;
}
.main {
  margin-top: 2.4rem;
  height: calc(100dvh - 7.2rem - 3 * 2.4rem);
  display: flex;
  gap: 2.4rem;
  justify-content: center;
}
@media (max-width: 800px) {
  .main {
    justify-content: start;
    align-items: center;
    flex-direction: column;
  }
}

.box {
  scrollbar-gutter: stable;
  width: 34vw;
  background-color: var(--color-background-500);
  border-radius: 0.9rem;
  overflow: auto;
  position: relative;
}
@media (max-width: 800px) {
  .box {
    width: 82vw;
  }
}
.loader {
  text-align: center;
  text-transform: uppercase;
  font-size: 2rem;
  font-weight: 600;
  margin: 4.8rem;
}

.error {
  text-align: center;
  font-size: 2rem;
  padding: 4.8rem;
}

.logo {
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 0.8rem;
}

.logo span {
  font-size: 3.2rem;
}

.logo h1 {
  font-size: 2.4rem;
  font-weight: 800;
}

.search {
  justify-self: center;
  border: none;
  padding: 1.1rem 1.6rem;
  font-size: 1.8rem;
  border-radius: 0.7rem;
  width: 36vw;
  transition: all 0.3s;
  color: var(--color-text);
  background-color: var(--color-primary-light);
}
@media (max-width: 800px) {
  .search {
    width: 34vw;
  }
}
.search::placeholder {
  color: var(--color-text-dark);
}

.search:focus {
  outline: none;
  box-shadow: 0 2.4rem 2.4rem rgba(0, 0, 0, 0.1);
  transform: translateY(-2px);
}

.num-results {
  justify-self: end;
  font-size: 1.8rem;
}

.btn-toggle {
  position: absolute;
  top: 0.8rem;
  right: 0.8rem;
  height: 2.4rem;
  aspect-ratio: 1;
  border-radius: 50%;
  border: none;
  background-color: var(--color-background-900);
  color: var(--color-text);
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  z-index: 1;
}

.list {
  list-style: none;
  padding: 0.8rem 0;
  overflow: auto;
}

.list-watched {
  height: calc(100% - 9rem);
}

.list li {
  position: relative;
  display: grid;
  grid-template-columns: 4rem 1fr;
  grid-template-rows: auto auto;
  column-gap: 2rem;
  font-size: 1.6rem;
  align-items: center;
  padding: 1.2rem 2.2rem;
  border-bottom: 1px solid var(--color-background-100);
}

.list.list-movies li {
  cursor: pointer;
  transition: all 0.3s;
}

.list.list-movies li:hover {
  background-color: var(--color-background-100);
}

.list img {
  width: 100%;
  grid-row: 1 / -1;
}

.list h3 {
  font-size: 1.8rem;
}

.list div {
  display: flex;
  align-items: center;
  gap: 2.4rem;
}

.list p {
  display: flex;
  align-items: center;
  gap: 0.8rem;
}
@media (max-width: 800px) {
  .list li {
    grid-template-columns: 9vw 1fr;
    font-size: 2.8rem;
  }
  .list h3 {
    font-size: 3.1rem;
  }
}

.btn-delete {
  position: absolute;
  right: 2.4rem;
  height: 1.8rem;
  aspect-ratio: 1;
  border-radius: 50%;
  border: 2px solid rgb(0, 0, 0);
  background-color: #ff8fab;
  color: "var(--color-background-900)";
  font-size: 0.9rem;
  font-weight: bold;
  cursor: pointer;
  transition: all 0.3s;
}
@media (max-width: 800px) {
  .btn-delete {
    font-size: 2rem;
    height: 2.8rem;
  }
}

.summary {
  padding: 2.2rem 3.2rem 1.8rem 3.2rem;
  border-radius: 0.9rem;
  background-color: var(--color-background-100);
  box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.2);
}

.summary h2 {
  text-transform: uppercase;
  font-size: 1.6rem;
  margin-bottom: 0.6rem;
}

.summary div {
  display: flex;
  align-items: center;
  gap: 2.4rem;
  font-size: 1.6rem;
  font-weight: 600;
}

.summary p {
  display: flex;
  align-items: center;
  gap: 0.8rem;
}
@media (max-width: 800px) {
  .summary h2 {
    font-size: 3.4vw;
  }
  .summary div {
    font-size: 3vw;
  }
}
.imdbLogo {
  width: 2.6vw;
}
.rateLogo {
  width: 2vw;
}
.imdbLogo-big {
  color: #7b2cbf;
  width: 3.6vw;
}
@media (max-width: 800px) {
  .imdbLogo {
    width: 6vw;
  }
  .imdbLogo-big {
    width: 8.5vw;
  }
  .rateLogo {
    width: 6vw;
  }
}
.genres {
  display: flex;
  gap: 0.5vw;
}
.badge {
  padding: 0.2vw 0.7vw;
  text-align: center;
  border-radius: 999px;
  align-self: flex-start;
  display: inline-block;
  background-color: var(--color-background-500);
}
@media (max-width: 800px) {
  .badge {
    padding: 0.4vw 1.2vw;
  }
}
.details {
  line-height: 1.4;
  font-size: 1.4rem;
}
@media (max-width: 800px) {
  .details {
    font-size: 2.4rem;
  }
}

.details header {
  display: flex;
}

.details section {
  padding: 4rem;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.details img {
  width: 33%;
}

.details-overview {
  width: 100%;
  padding: 2.4rem 3rem;
  background-color: var(--color-background-100);
  display: flex;
  flex-direction: column;
  gap: 1.4rem;
  overflow-x: hidden;
}

.details-overview h2 {
  font-size: 2.4rem;
  margin-bottom: 0.4rem;
  line-height: 1.1;
}

.details-overview p {
  color: gray;
  display: flex;
  align-items: center;
  gap: 0.8rem;
}

@media (max-width: 800px) {
  .details-overview h2 {
    font-size: 3.4rem;
  }

  .details-overview p {
    font-size: 3vw;
  }
}

.rating {
  background-color: var(--color-background-100);
  border-radius: 0.9rem;
  padding: 2rem 2.4rem;
  margin-bottom: 0.8rem;
  font-weight: 600;
  display: flex;
  flex-direction: column;
  gap: 2.4rem;
}

.star {
  width: 23vw;
  height: 1vw;
  display: "block";
  cursor: "pointer";
}
@media (max-width: 800px) {
  .star {
    width: 65vw;
    height: 4vw;
    display: "block";
    cursor: "pointer";
  }
}

.btn-add,
.btn-switch,
.btn-logout {
  text-align: center;
  text-decoration: none;
  background-color: #ff8fab;
  color: var(--color-text);
  border: none;
  border-radius: 10rem;
  font-size: 1.4vw;
  padding: 1rem;
  font-weight: bold;
  cursor: pointer;
  transition: all 0.3s;
}
@media (max-width: 800px) {
  .btn-add,
  .btn-switch,
  .btn-logout {
    font-size: 2.6vw;
    padding: 1.4rem;
  }
}

.btn-add:hover,
.btn-switch:hover,
.btn-delete:hover {
  background-color: #bde0fe;
}

.seconds {
  background-color: var(--color-background-100);
  width: 8rem;
  border-radius: 10rem;
  font-weight: 600;
  text-align: center;
  padding: 0.4rem;
  margin-top: 2.4rem;
}

.btn-back {
  position: absolute;
  top: 0.6rem;
  left: 0.6rem;
  height: 3.2rem;
  aspect-ratio: 1;
  border-radius: 50%;
  border: none;
  background-color: #7b2cbf;
  color: var(--color-background-500);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
  font-family: sans-serif;
  font-size: 2.4rem;
  font-weight: bold;
  cursor: pointer;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}
@media (max-width: 800px) {
  .btn-back {
    height: 4.2rem;
    font-size: 3.4rem;
  }
}
.btn-switch,
.btn-logout {
  border-radius: 1rem;
  margin-left: 0.4vw;
}

.btn-logout {
  font-size: 3vmin;
  margin: 1vmin;
  width: 18vmin;
}
@media (max-width: 800px) {
  .hidden {
    display: none;
  }
}
.hiddenPc {
  display: none;
}
@media (min-width: 800px) {
  .mobileOnly {
    display: none;
  }
}

